add header style

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
   </head>
   <body>
-    <header>
-      <img src="./images/logo.svg" alt="snap logo" />
-      <ul>
+    <header class="header">
+      <img class="logo" src="./images/logo.svg" alt="snap logo" />
+      <ul class="nav__list">
         <li>
-          <a class="nav__link" href="#"
-            ><span>Features</span
-            ><img src="./images/icon-arrow-down.svg" alt="arrow down"
-          /></a>
+          <a class="nav__link" href="#">
+            <span>Features</span>
+            <img src="./images/icon-arrow-down.svg" alt="arrow down" />
+          </a>
         </li>
         <li>
-          <a class="nav__link" href="#"
-            ><span>Company</span
-            ><img src="./images/icon-arrow-down.svg" alt="arrow down"
-          /></a>
+          <a class="nav__link" href="#">
+            <span>Company</span>
+            <img src="./images/icon-arrow-down.svg" alt="arrow down" />
+          </a>
         </li>
         <li><a class="nav__link" href="#">Careers</a></li>
         <li><a class="nav__link" href="#">About</a></li>
@@ -37,12 +37,12 @@
       </ul>
     </header>
     <main>
-      <section class="hero-section">
+      <section class="hero-section container">
         <div>
           <h1>Make remote work</h1>
           <p>
-            Get your team in sync, no matter your location. Streamline processes,
-            create team rituals, and watch productivity soar.
+            Get your team in sync, no matter your location. Streamline
+            processes, create team rituals, and watch productivity soar.
           </p>
           <a href="#" class="btn">Learn more</a>
           <div class="feature-in">
@@ -62,7 +62,6 @@
             alt="a man standing using a computer"
           />
         </picture>
-
       </section>
     </main>
   </body>
