--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="./script.js"></script>
     <link
       rel="icon"
       type="image/png"
@@ -26,25 +27,27 @@
         <li class="nav__submenu">
           <a class="nav__link nav__link--submenu" href="#">
               <span>Features</span>
-              <!-- <img src="./images/icon-arrow-up.svg" alt="arrow up" /> -->
-              <img src="./images/icon-arrow-down.svg" alt="arrow down" />
+              <img class="show-hover" src="./images/icon-arrow-up.svg" alt="arrow up" />
+              <img class="hide-hover" src="./images/icon-arrow-down.svg" alt="arrow down" />
             </a>
-            <ul class="submenu">
-              <li><a href="#">Submenu item 1</a></li>
-              <li><a href="#">Submenu item 2</a></li>
-              <li><a href="#">Submenu item 3</a></li>
+            <ul class="submenu submenu-right">
+              <li><a class="submenu__link" href="#"><img src="./images/icon-todo.svg" alt=""><span>Todo List</span></a></li>
+              <li><a class="submenu__link" href="#"><img src="./images/icon-calendar.svg" alt=""><span>Calendar</span></a></li>
+              <li><a class="submenu__link" href="#"><img src="./images/icon-reminders.svg" alt=""><span>Reminders</span></a></li>
+              <li><a class="submenu__link" href="#"><img src="./images/icon-planning.svg" alt=""><span>Planning</span></a></li>
             </ul>
           
         </li>
         <li class="nav__submenu">
           <a class="nav__link nav__link--submenu" href="#">
             <span>Company</span>
-            <img src="./images/icon-arrow-down.svg" alt="arrow down" />
+            <img class="show-hover" src="./images/icon-arrow-up.svg" alt="arrow up" />
+            <img class="hide-hover" src="./images/icon-arrow-down.svg" alt="arrow down" />
           </a>
             <ul class="submenu">
-              <li><a href="#">Submenu item 1</a></li>
-              <li><a href="#">Submenu item 2</a></li>
-              <li><a href="#">Submenu item 3</a></li>
+              <li><a class="submenu__link" href="#">History</a></li>
+              <li><a class="submenu__link" href="#">Our Team</a></li>
+              <li><a class="submenu__link" href="#">Blog</a></li>
             </ul>
           
         </li>
