--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-
+    <link rel="stylesheet" href="queries.css" />
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
   </head>
   <body>
@@ -77,7 +77,7 @@
         </div>
         <picture>
           <source
-            media="(max-width: 600px)"
+            media="(max-width: 800px)"
             srcset="./images/image-hero-mobile.png"
           />
           <img
